<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/ic_order"
        android:title="@string/nav_order" />
    
    <item
        android:id="@+id/nav_worker"
        android:icon="@drawable/ic_worker"
        android:title="@string/nav_worker" />
    
    <item
        android:id="@+id/nav_monitoring"
        android:icon="@drawable/ic_monitoring"
        android:title="@string/nav_monitoring" />
    
    <item
        android:id="@+id/nav_accounts"
        android:icon="@drawable/ic_accounts"
        android:title="@string/nav_accounts" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
    
</menu>