<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.youtubesmm.app.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/orderFragment"
        android:name="com.youtubesmm.app.ui.order.OrderFragment"
        android:label="@string/nav_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/workerFragment"
        android:name="com.youtubesmm.app.ui.worker.WorkerFragment"
        android:label="@string/nav_worker"
        tools:layout="@layout/fragment_worker" />

    <fragment
        android:id="@+id/monitoringFragment"
        android:name="com.youtubesmm.app.ui.monitoring.MonitoringFragment"
        android:label="@string/nav_monitoring"
        tools:layout="@layout/fragment_monitoring" />

    <fragment
        android:id="@+id/accountsFragment"
        android:name="com.youtubesmm.app.ui.accounts.AccountsFragment"
        android:label="@string/nav_accounts"
        tools:layout="@layout/fragment_accounts" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.youtubesmm.app.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>